[gd_scene load_steps=8 format=3 uid="uid://ebgv2em0agr3"]

[ext_resource type="Script" path="res://scenes/menus/options_menu.gd" id="1_8pohp"]
[ext_resource type="Texture2D" uid="uid://bqjkmi0odbocm" path="res://scenes/menus/popupMenu.png" id="2_vup7s"]
[ext_resource type="FontFile" uid="uid://ddmsbwqyya44t" path="res://fonts/m6x11.ttf" id="3_5jrau"]
[ext_resource type="PackedScene" uid="uid://753dvq3mxgal" path="res://scenes/menus/components/menu_button.tscn" id="4_7l5dp"]
[ext_resource type="Texture2D" uid="uid://bglvqkrwxjxiv" path="res://scenes/menus/components/checkBoxUnchecked.png" id="5_s41d8"]

[sub_resource type="LabelSettings" id="LabelSettings_k47dm"]
font = ExtResource("3_5jrau")
font_size = 48
font_color = Color(0.215686, 0.580392, 0.431373, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xy2mf"]
font = ExtResource("3_5jrau")
font_color = Color(0, 0, 0, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -80.0
offset_right = 112.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_8pohp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -72.0
offset_right = 104.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vup7s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -69.0
offset_right = 81.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="Label" parent="VBoxContainer"]
visibility_layer = 524288
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_k47dm")
horizontal_alignment = 1

[node name="Spacer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteButton" parent="VBoxContainer/MuteContainer" instance=ExtResource("4_7l5dp")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../CloseContainer/CloseButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../WormModeContainer/WormModeButton")
text = "MUTE "
icon = ExtResource("5_s41d8")
icon_alignment = 2
checkable = true
invert_mute_behavior = true

[node name="WormModeContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WormModeButton" parent="VBoxContainer/WormModeContainer" instance=ExtResource("4_7l5dp")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../MuteContainer/MuteButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../CloseContainer/CloseButton")
text = "WORM MODE"
icon = ExtResource("5_s41d8")
icon_alignment = 2
checkable = true

[node name="CloseContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" parent="VBoxContainer/CloseContainer" instance=ExtResource("4_7l5dp")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../WormModeContainer/WormModeButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../MuteContainer/MuteButton")
text = "BACK"
pressed_sound = 4

[node name="HelpMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = 40.0
offset_right = 144.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 0
text = "Reach a high-score of 50 to unlock WORM MODE"
label_settings = SubResource("LabelSettings_xy2mf")
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/MuteContainer/MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WormModeContainer/WormModeButton" to="." method="_on_worm_mode_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseContainer/CloseButton" to="." method="_on_close_button_pressed"]
